--- a/lbcsClient/app.json
+++ b/lbcsClient/app.json
@@ -13,7 +13,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -23,6 +23,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "little bull climbing system mobile client",
+    "githubUrl": "https://github.com/DonQueso89/LBCS"
   }
 }
