--- a/ledserver/pyproject.toml
+++ b/ledserver/pyproject.toml
@@ -13,13 +13,10 @@ isort = "^4.3.21"
 mypy = "^0.770"
 black = "^19.10b0"
 flake8 = "^3.7.9"
+ipython = "^7.16.1"
 
 [tool.poetry.scripts]
 lbcs-server = 'lbcs.server:main'
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.isort]
 multi_line_output = 3
@@ -27,3 +24,7 @@ include_trailing_comma = true
 force_grid_wrap= 0
 use_parentheses = true
 sline_length = 88
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
