--- a/ledserver/pyproject.toml
+++ b/ledserver/pyproject.toml
@@ -14,6 +14,7 @@ mypy = "^0.770"
 black = "^19.10b0"
 flake8 = "^3.7.9"
 ipython = "^7.16.1"
+pytest = "^5.4.3"
 
 [tool.poetry.scripts]
 lbcs-server = 'lbcs.server:main'
