highlevel controlbuttons on index page. support configurable mapping algo

--- a/ledserver/lbcs/example_config.ini
+++ b/ledserver/lbcs/example_config.ini
@@ -1,6 +1,10 @@
 [app]
+# app config
 port=8888
 debug=1
-rows=7
-columns=7
 pixel_pin=D18
+# grid config
+rows=5
+columns=5
+map_algo=TOP_BOTTOM_ZIG_ZAG
+skip=1
