--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "expo-asset": "~8.1.5",
     "ramda": "^0.27.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-canvas": "^0.1.37",
     "react-native-flash-message": "^0.1.15",
     "react-native-paper": "^3.10.1",
     "react-native-screens": "~2.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
