--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
+    "expo-image-picker": "~8.1.0",
     "ramda": "^0.27.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
