--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
+    "bson-objectid": "^1.3.1",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
     "expo-image-picker": "~8.1.0",
