--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -9,17 +9,25 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
     "bson-objectid": "^1.3.1",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
     "expo-image-picker": "~8.1.0",
     "ramda": "^0.27.0",
     "react": "~16.9.0",
+    "react-color": "^2.18.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-canvas": "^0.1.37",
+    "react-native-color-picker": "^0.6.0-rc.2",
     "react-native-flash-message": "^0.1.15",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
