--- a/ledserver/pyproject.toml
+++ b/ledserver/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 tornado = "^6.0.4"
+humanize = "^3.0.0"
+numpy = "^1.19.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3.21"
