--- a/ledserver/pyproject.toml
+++ b/ledserver/pyproject.toml
@@ -2,7 +2,7 @@
 name = "lbcs"
 version = "0.11.0"
 description = "A small async server for processing led commands to AdaFruit Neopixels"
-authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]
+authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>", "Rico van Midde <rico.vanmidde@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
