--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.7",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.8.0",
@@ -16,6 +17,7 @@
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
     "expo-image-picker": "~8.1.0",
+    "graphql": "^15.5.0",
     "ramda": "^0.27.0",
     "react": "~16.9.0",
     "react-color": "^2.18.1",
