--- a/lbcsClient/package.json
+++ b/lbcsClient/package.json
@@ -5,39 +5,44 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@graphql-codegen/cli": "^1.20.1",
+    "@graphql-codegen/typescript": "^1.20.2",
+    "@graphql-codegen/typescript-operations": "^1.17.14",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/native": "^5.9.2",
     "bson-objectid": "^1.3.1",
     "expo": "~37.0.3",
-    "expo-asset": "~8.1.5",
+    "expo-asset": "^8.1.7",
     "expo-image-picker": "~8.1.0",
-    "graphql": "^15.5.0",
-    "ramda": "^0.27.0",
+    "graphql": "^15.3.0",
+    "ramda": "^0.27.1",
     "react": "~16.9.0",
     "react-color": "^2.18.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-canvas": "^0.1.37",
     "react-native-color-picker": "^0.6.0-rc.2",
-    "react-native-flash-message": "^0.1.15",
+    "react-native-flash-message": "^0.1.22",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-paper": "^3.10.1",
+    "react-native-paper": "^3.12.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "11.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
+    "@babel/core": "^7.12.10",
+    "@types/react": "^16.9.56",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
     "typescript": "~3.8.3"
