prepare ledserver docker setup. update architecture

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         build: ./ledserver
         volumes:
             - ./ledserver:/srv/app
-        container_name: raspberrypi.local
+        container_name: ledserver.local
         ports:
           - "127.0.0.1:8888:8888"
         networks:
