--- a/ledserver/Dockerfile
+++ b/ledserver/Dockerfile
@@ -1,11 +1,11 @@
-FROM python:3.8-slim
-RUN apt -y update
-RUN pip install poetry
-ENV PATH="/root/.poetry/bin:${PATH}"
-COPY ./poetry.lock ./pyproject.toml /code/
-WORKDIR /code
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi
+FROM python:3.9-slim
+RUN pip install -U pip
+RUN apt update
+RUN apt install -y python3-setuptools
+RUN mkdir -p /srv/app
 WORKDIR /srv/app
+# repo will be mounted here so we can install it in editable mode
+VOLUME /srv/app
+EXPOSE 8888
 
 ENTRYPOINT ["/bin/bash", "/srv/app/.boot.sh"]
