install deps into image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.9-slim
 RUN pip install -U pip
 RUN apt update
-RUN apt install -y python3-setuptools
+RUN apt install -y build-essential python3-setuptools
 RUN mkdir -p /srv/app
 WORKDIR /srv/app
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 # repo will be mounted here
 VOLUME /srv/app
 EXPOSE 9999
